2009-11-13  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

        Backport from mainline.
        2009-07-28  Daniel Jacobowitz  <dan@codesourcery.com>

        * arm-tdep.c (arm_push_dummy_call): Set the low bit of LR for
        a Thumb entry point.
	(thumb_get_next_pc): Handle Thumb-2 and ARM v6 instructions.
	Refuse to single step into IT blocks.

        2009-10-28  Daniel Jacobowitz  <dan@codesourcery.com>

        Reported by Antti Hatala <ahatala@nvidia.com>
        * arm-tdep.c (thumb_get_next_pc): Limit check to IT instructions
        correctly.

2009-10-22  Paul Pluzhnikov  <ppluzhnikov@google.com>

	PR gdb/10819
	* dwarf2-frame.c (find_cie): Don't call bsearch on empty cie_table.
	* objfiles.c (find_pc_section): Likewise.
	(update_section_map): Don't allocate empty table.
	
2009-10-19  Don Lee  <don.lee@sunplusct.com>

	* score-tdep.c: Delete some simulator dependent codes.
	* score-tdep.h: Delete some simulator dependent macro definitions.

2008-10-16  Steven G. Kargl  <kargl@gcc.gnu.org>  (tiny patch)

	* amd64fbsd-nat.c (amd64fbsd_supply_pcb): Conditionally compile in
	support for pcb->pcb_{fs,ds,es,gs} on FreeBSD older than 8.0.

2009-10-08  Paul Pluzhnikov  <ppluzhnikov@google.com>

	PR gdb/10457
	* elfread.c (elf_symtab_read): Don't use alloca in a loop.
	
2009-10-06  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 7.0.0.20091006-cvs.

2009-10-06  Joel Brobecker  <brobecker@adacore.com>

	GDB 7.0 released.

2009-10-06  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Change "Changes since GDB 6.8" into "Changes in GDB 7.0".

2009-10-06  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 7.0.
	* version.in: Likewise.

2009-10-06  Tristan Gingold  <gingold@adacore.com>

	* darwin-nat.c: Add __TEXT __info_plist content.
	(darwin_attach_pid): Update error message.

2009-10-04  Pedro Alves  <pedro@codesourcery.com>

	* NEWS: Mention non-stop mode.
